--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>ShoppingCart</h1>
+        <h1>
+<a name="shoppingcart" class="anchor" href="#shoppingcart"><span class="octicon octicon-link"></span></a>ShoppingCart</h1>
 
 <p>This Ruby on Rails plugin provides simple shopping cart functionality 
 that uses with ActiveMerchant for merchant gateway processing.</p>
 
 <p>*Tested with Rails 2.3.3</p>
 
-<h1>Example</h1>
+<h1>
+<a name="example" class="anchor" href="#example"><span class="octicon octicon-link"></span></a>Example</h1>
 
 <pre><code>./script/plugin install git@github.com:chip/shopping_cart.git
 rake shopping_cart:setup
